# AGIN

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Makefile  README.md  pbrain-gomoku-ai
.github/workflows/: ci.yml  codeql-analysis.yml  mirroring.yml
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  Main.cpp  Main.hpp  Makefile  main.cpp
src/Brain/: Brain.cpp  Brain.hpp  BrainValues.hpp  CMakeLists.txt  Neighbor.cpp  Neighbor.hpp
src/CommandHandler/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp  Error.hpp  InfoClass.hpp  Values.hpp
src/Main/: CMakeLists.txt  Main.cpp  Main.hpp
